<resources>
    <string name="app_name">JSON Currencies</string>

    <string name="today_date">Today</string>
    <string name="currency_date">Currency date:</string>

    <string name="search_pref">Search last selected rate (not implemented yet)</string>
    <string name="settings">Settings</string>

    <!-- TODO (1): Add useful strings res to main_menu menu title -->
    <string name="share">Share</string>
    <string name="text_to_share">JSONCurrencies is a project developed by António \"Curtes Malteser\" Bastião</string>
    <string name="test">TEST</string>
    <string name="equal_sign">=</string>
    <string name="number_one_string">1</string>
    <string name="hint">0.00</string>

    <!-- Strings for Notifications and Toasts -->
    <string name="main_notification_channel_name">Primary</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="logo_widget">App logo.</string>
    <string name="cancel_string">Cancel</string>
    <string name="selected_currency">Selected Currency:</string>

</resources>
