<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <TextView
            android:id="@+id/tvDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/today_date"
            app:layout_constraintStart_toStartOf="@+id/tvCurrencyDateLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/tvDateLabel"
            app:layout_constraintEnd_toStartOf="@+id/tvDateCurrency"
            app:layout_constraintStart_toEndOf="@+id/tvDateCurrency"
            app:layout_constraintTop_toBottomOf="@+id/tvDateLabel" />

        <TextView
            android:id="@+id/tvCurrencyDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/currency_date"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDateLabel" />

        <TextView
            android:id="@+id/tvDateCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/tvCurrencyDateLabel"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrencyDateLabel" />

        <TextView
            android:id="@+id/baseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="TextView"
            app:layout_constraintEnd_toStartOf="@+id/baseSign"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toEndOf="@+id/baseSign"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrencyDateLabel" />


        <ImageView
            android:id="@+id/baseSign"
            android:layout_width="100dp"
            android:layout_height="65dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tvOneLabel"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/baseLabel"
            app:srcCompat="@drawable/ic_sign_flag" />

        <TextView
            android:id="@+id/currencyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/baseLabel"
            app:layout_constraintEnd_toStartOf="@+id/currencySign"
            app:layout_constraintStart_toEndOf="@+id/currencySign"
            app:layout_constraintTop_toBottomOf="@+id/baseLabel" />

        <ImageView
            android:id="@+id/currencySign"
            android:layout_width="100dp"
            android:layout_height="65dp"
            app:layout_constraintBottom_toTopOf="@+id/baseSign"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/baseSign"
            app:srcCompat="@drawable/ic_sign_flag" />

        <TextView
            android:id="@+id/tvOneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/number_one_string"
            app:layout_constraintBottom_toTopOf="@+id/etValue"
            app:layout_constraintEnd_toStartOf="@+id/equalSignLabel01" />

        <TextView
            android:id="@+id/tvRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/tvOneLabel"
            app:layout_constraintStart_toEndOf="@+id/equalSignLabel01"
            app:layout_constraintTop_toBottomOf="@+id/tvOneLabel" />

        <TextView
            android:id="@+id/equalSignLabel01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/equal_sign"
            app:layout_constraintBottom_toTopOf="@+id/tvOneLabel"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tvOneLabel" />

        <EditText
            android:id="@+id/etValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="right"
            android:hint="@string/hint"
            android:inputType="numberDecimal"
            android:maxEms="8"
            android:minEms="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView11" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/textView11"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/equal_sign"
            app:layout_constraintBottom_toTopOf="@+id/etValue"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/etValue" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>